[package]
name = "remodel"
version = "0.11.2"
description = "A tool to read, modify, and write Roblox objects."
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rojo-rbx/remodel"
documentation = "https://github.com/rojo-rbx/remodel"
repository = "https://github.com/rojo-rbx/remodel"
readme = "README.md"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rbx_binary = { git = "https://github.com/brinkokevin/rbx-dom", branch = "master" }
rbx_dom_weak = { git = "https://github.com/brinkokevin/rbx-dom", branch = "master" }
rbx_reflection = { git = "https://github.com/brinkokevin/rbx-dom", branch = "master" }
rbx_reflection_database = { git = "https://github.com/brinkokevin/rbx-dom", branch = "master" }
rbx_xml = { git = "https://github.com/brinkokevin/rbx-dom", branch = "master" }

anyhow = "1.0.44"
backtrace = "0.3.61"
base64 = "0.13.0"
log = "0.4.14"
rbx_cookie = "0.1.2"
reqwest = "0.9.24"
serde = "1.0.130"
serde_json = "1.0.68"
structopt = "0.3.23"

[dependencies.mlua]
version = "0.7.4"
features = ["lua53", "vendored"]

[dependencies.env_logger]
version = "0.7.1"
default-features = false
features = ["termcolor", "atty"]
